2010-01-13  Pavel Feldman  <pfeldman@chromium.org>

        Reviewed by Timothy Hatcher.

        Web Inspector: Introduce SourceFrame2 with basic breakpoint / execution line
        rendering capabilities.

        Contains a drive-by naming fix (lineNumberOffset and lineNumberToOffset were
        too close to each other, but were unrelated).

        https://bugs.webkit.org/show_bug.cgi?id=33618

        * WebCore.gypi:
        * WebCore.vcproj/WebCore.vcproj:
        * inspector/front-end/SourceFrame2.js: Added.
        (WebInspector.SourceFrame2):
        (WebInspector.SourceFrame2.prototype.set text):
        (WebInspector.SourceFrame2.prototype.get executionLine):
        (WebInspector.SourceFrame2.prototype.set executionLine):
        (WebInspector.SourceFrame2.prototype.revealLine):
        (WebInspector.SourceFrame2.prototype._toggleBreakpoint):
        (WebInspector.SourceFrame2.prototype.resize):
        (WebInspector.BreakpointLineNumberDecorator):
        (WebInspector.BreakpointLineNumberDecorator.prototype.decorate):
        (WebInspector.BreakpointLineNumberDecorator.prototype._paintBreakpoint):
        (WebInspector.BreakpointLineNumberDecorator.prototype._paintProgramCounter):
        (WebInspector.BreakpointLineNumberDecorator.prototype.mouseDown):
        (WebInspector.ExecutionLineDecorator):
        (WebInspector.ExecutionLineDecorator.prototype.decorate):
        * inspector/front-end/TextEditor.js:
        (WebInspector.TextEditor):
        (WebInspector.TextEditor.prototype.get textModel):
        (WebInspector.TextEditor.prototype.set readOnly):
        (WebInspector.TextEditor.prototype.set lineNumberDecorator):
        (WebInspector.TextEditor.prototype.set lineDecorator):
        (WebInspector.TextEditor.prototype.selectionRange):
        (WebInspector.TextEditor.prototype._offsetToLine):
        (WebInspector.TextEditor.prototype._lineToOffset):
        (WebInspector.TextEditor.prototype.reveal):